--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "@zapal/kris-hovanka-links",
   "version": "1.0.0",
   "scripts": {
-    "minify:js": "minify index.js > dist/index.js && minify service-worker.js > dist/service-worker.js",
     "minify:css": "csso css/reset.css --output dist/css/reset.css && csso css/style.css --output dist/css/style.css",
     "minify:html": "minify index.html > dist/index.html",
-    "minify": "npm run minify:js && npm run minify:css && npm run minify:html",
+    "minify": "pnpm run minify:css && pnpm run minify:html",
     "copyfiles": "copyfiles site.webmanifest _redirects images/* images/**/* fonts/**/* dist",
     "dir": "mkdirp dist dist/css",
     "build": "pnpm dir && pnpm copyfiles && pnpm minify"
